# source-pad

./: .env.example  CLAUDE.md  Containerfile  README.md  pyproject.toml
src/source_pad/: __init__.py  cli.py  config.py  crawler.py  indexer.py  rag.py  web.py
static/: app.js  index.html  style.css
